[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsini"
version = "1.0.0"
authors = [
  { name="Akeem Amusat", email="contact@olayml.xyz" },
]
description = "Python parser for ini files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aoamusat/iniparser"
Issues = "https://github.com/aoamusat/iniparser/issues"