[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iniutil"
version = "1.0.4"
authors = [
  { name="Akeem Amusat", email="hi@olayml.xyz" },
]
description = "Python parser for ini files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aoamusat/iniutil"
Issues = "https://github.com/aoamusat/iniutil/issues"